# PulsePost-Backend

./: .dockerignore  .editorconfig  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml  pytest.ini
apps/accounts/: admin.py  apps.py  authentication.py  extensions.py  managers.py  models.py  renderers.py
apps/accounts/api/: serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_rename_create_at_user_created_at.py  0003_rename_avatar_user__avatar.py  0004_remove_user__avatar_user_avatar.py  0005_alter_user_bio.py
apps/accounts/tests/: conftest.py  factories.py  test_email_auth_views.py  test_models.py  test_pytest.py  test_social_auth_views.py  test_views.py
apps/posts/: admin.py  models.py
apps/posts/api/: serializers.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_alter_post_featured_image.py  0003_alter_post_likes.py
blog/: settings.py  urls.py  wsgi.py
config/: __init__.py  base.py  local.py  prod.py
core/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
docs/api/: index.md  users.md
settings/: __init__.py  base.py  local.py  prod.py
tests/: conftest.py  test_accounts.py  test_posts.py
